snapshots/aws_tgw_multi_az_intra_region_nacl_test/aws_configs/us-east-1/SecurityGroups.json
{
 "SecurityGroups": [
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-0347fcbee6f1349c3",
   "GroupName": "terraform-20200925155945167400000004",
   "IpPermissions": [
    {
     "FromPort": 80,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "HTTP Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "HTTP Access"
      },
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "HTTP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 80,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 33434,
     "IpProtocol": "udp",
     "IpRanges": [
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "Traceroute Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "Traceroute Access"
      },
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "Traceroute Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 33534,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "SSH Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 8,
     "IpProtocol": "icmp",
     "IpRanges": [
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "ICMP Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "ICMP Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "ICMP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 0,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 443,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "HTTPS Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "HTTPS Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "HTTPS Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 443,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Environment",
     "Value": "dev"
    },
    {
     "Key": "Name",
     "Value": "dev-priv-sg"
    },
    {
     "Key": "Terraform",
     "Value": "true"
    }
   ],
   "VpcId": "vpc-03ccfd695642eea86"
  },
  {
   "Description": "default VPC security group",
   "GroupId": "sg-0731def6b8f1aa5ff",
   "GroupName": "default",
   "IpPermissions": [
    {
     "IpProtocol": "-1",
     "IpRanges": [],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-0731def6b8f1aa5ff",
       "UserId": "028403472736"
      }
     ]
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "VpcId": "vpc-0a5a5ea367be96f67"
  },
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-0b4edc0074a8d37e4",
   "GroupName": "terraform-20200925155926737300000001",
   "IpPermissions": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Terraform",
     "Value": "true"
    },
    {
     "Key": "Environment",
     "Value": "prod"
    },
    {
     "Key": "Name",
     "Value": "prod-pub-sg"
    }
   ],
   "VpcId": "vpc-0a5a5ea367be96f67"
  },
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-0f45b42e804d9e645",
   "GroupName": "terraform-20200925155926739100000002",
   "IpPermissions": [
    {
     "FromPort": 33434,
     "IpProtocol": "udp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Traceroute Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 33534,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "SSH Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 8,
     "IpProtocol": "icmp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "ICMP Echo Request Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 0,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Name",
     "Value": "prod-jump-sg"
    },
    {
     "Key": "Environment",
     "Value": "prod"
    },
    {
     "Key": "Terraform",
     "Value": "true"
    }
   ],
   "VpcId": "vpc-0a5a5ea367be96f67"
  },
  {
   "Description": "Managed by Terraform",
   "GroupId": "sg-0f45eadb7d7cd55a8",
   "GroupName": "terraform-20200925155926742700000003",
   "IpPermissions": [
    {
     "FromPort": 80,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "HTTP Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "HTTP Access"
      },
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "HTTP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 80,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 33434,
     "IpProtocol": "udp",
     "IpRanges": [
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "Traceroute Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "Traceroute Access"
      },
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "Traceroute Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 33534,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 22,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "SSH Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 22,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 8,
     "IpProtocol": "icmp",
     "IpRanges": [
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "ICMP Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "ICMP Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "ICMP Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 0,
     "UserIdGroupPairs": []
    },
    {
     "FromPort": 443,
     "IpProtocol": "tcp",
     "IpRanges": [
      {
       "CidrIp": "192.168.0.0/16",
       "Description": "HTTPS Access"
      },
      {
       "CidrIp": "10.0.0.0/8",
       "Description": "HTTPS Access"
      },
      {
       "CidrIp": "172.16.0.0/20",
       "Description": "HTTPS Access"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "ToPort": 443,
     "UserIdGroupPairs": []
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0",
       "Description": "Allow all"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "Tags": [
    {
     "Key": "Terraform",
     "Value": "true"
    },
    {
     "Key": "Environment",
     "Value": "prod"
    },
    {
     "Key": "Name",
     "Value": "prod-priv-sg"
    }
   ],
   "VpcId": "vpc-0a5a5ea367be96f67"
  },
  {
   "Description": "default VPC security group",
   "GroupId": "sg-0f6281dc4ef1ab0d8",
   "GroupName": "default",
   "IpPermissions": [
    {
     "IpProtocol": "-1",
     "IpRanges": [],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": [
      {
       "GroupId": "sg-0f6281dc4ef1ab0d8",
       "UserId": "028403472736"
      }
     ]
    }
   ],
   "IpPermissionsEgress": [
    {
     "IpProtocol": "-1",
     "IpRanges": [
      {
       "CidrIp": "0.0.0.0/0"
      }
     ],
     "Ipv6Ranges": [],
     "PrefixListIds": [],
     "UserIdGroupPairs": []
    }
   ],
   "OwnerId": "028403472736",
   "VpcId": "vpc-03ccfd695642eea86"
  }
 ]
}
